# agent-probe

./: .gitignore  CMakeLists.txt  README.md
fixtures/javascript/: express_app.js
fixtures/python/: data_pipeline.py  flask_app.py
server/: app.py
server/static/: index.html
src/: main.cpp
src/analyzers/: analysis_context.h  analyzer.h  api_call_analyzer.cpp  api_call_analyzer.h  crud_analyzer.cpp  crud_analyzer.h  fan_out_analyzer.cpp  fan_out_analyzer.h  retry_analyzer.cpp  retry_analyzer.h
src/cli/: formatter.cpp  formatter.h
src/graph/: algorithms.cpp  algorithms.h  builder.cpp  builder.h  graph.cpp  graph.h
src/models/: finding.h
src/parser/: ast_node.h  javascript_profile.h  language_profile.h  python_profile.h  ts_parser.cpp  ts_parser.h
src/scoring/: scorer.cpp  scorer.h
tests/cpp/: test_analyzers.cpp  test_graph.cpp  test_js_parser.cpp  test_parser.cpp  test_placeholder.cpp
